change function to view Order History

--- a/public/template/themes/css/main.css
+++ b/public/template/themes/css/main.css
@@ -623,7 +623,7 @@ section.our_client .row{
 	-webkit-border-radius: 0 0 3px 3px;
 }
 
-/* Product Detail
+/*  Detail
 ----------------------------------------------------------------------------- */
 .thumbnails.small {
 	margin-top: 10px;
